# learn_opencv

./: CMakeLists.txt
config/: read.yaml  write.yaml
src/: Filter_Avg.cpp  PgmToPng.cpp  ReadWriteYaml.cpp  client.cpp  scans.pgm  server.cpp
